fix code elements not wrapping

--- a/src/styles/layouts/PostLayout.scss
+++ b/src/styles/layouts/PostLayout.scss
@@ -1,5 +1,5 @@
-@use "src/styles/abstracts/variables" as *; 
-@use "src/styles/abstracts/mixins" as *; 
+@use "src/styles/abstracts/variables" as *;
+@use "src/styles/abstracts/mixins" as *;
 
 section.post {
 	.pre-header {
@@ -12,7 +12,7 @@ section.post {
 		font-size: $font-size-small;
 	}
 
-	:not(figure) > img {
+	:not(figure)>img {
 		margin: 32px auto;
 	}
 
@@ -21,11 +21,12 @@ section.post {
 		margin: 0.5em 0;
 	}
 
-	:not(pre) > code {
+	:not(pre)>code {
+		max-width: 100%;
 		padding: 0 0.25em;
 		background-color: $c-background;
 		border: 1px solid $c-border;
-		white-space: nowrap;
+		white-space: pre-wrap;
 		font-family: 'FreePixel';
 	}
 
